# Computer_Networks_Final_Project

./: CMakeLists.txt  README.md  main.cpp
Binaries/: server.out
Client/: Client.cpp  Client.hpp  Libraries.hpp  main.cpp
Common_Code/: Libraries.hpp  Log.cpp  Log.hpp  Protocol.hpp
Scripts/: compile_client.sh  compile_server.sh  run.sh
Server/: Command.cpp  Command.hpp  CommandCenter.hpp  DatabaseManager.hpp  Libraries.hpp  Server.cpp  Server.hpp  main.cpp
Server/Databases/: baze_de_date.db  users.db
